# Mavros-Obstacle-Avoidance

./: .gitignore  .gitmodules  Dockerfile  startup.sh
shared_ws/devel/: .catkin  .rosinstall  local_setup.fish  setup.fish
shared_ws/devel/lib/pkgconfig/: autopilot.pc
shared_ws/devel/share/autopilot/cmake/: autopilotConfig.cmake
shared_ws/src/autopilot/: CMakeLists.txt  package.xml
shared_ws/src/autopilot/config/: custom_params.parm
shared_ws/src/autopilot/launch/: keyboard_controller.launch  sitl_env.launch
shared_ws/src/autopilot/models/iris_with_camera/: model.sdf
shared_ws/src/autopilot/src/: ardupilot_launch.sh  state_publisher  takeoff_node  teleop_comm
shared_ws/src/autopilot/worlds/: empty_iris.world
