<?xml version="1.0"?>
<package format="2">
  <name>autopilot</name>
  <version>0.0.0</version>
  <description>The autopilot package</description>

  <maintainer email="prateek.277353@gmail.com">Prateek Sharma</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>mavros</depend>
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>teleop_twist_keyboard</depend>

</package>
